--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,45 @@
-/*  your css code here. If applicable */
+.middle{
+    margin: auto;
+    width: 60%;
+}
+
+.center{
+    text-align: center;
+}
+
+.right{
+    text-align: right;
+}
+table{
+    border: 1px solid black;
+    border-spacing: 1px;
+    padding: 1px;
+}
+
+td{
+    padding: 1px;
+    border: 1px solid black;
+}
+
+.green{
+    background-color: green;
+}
+
+.blue{
+    background-color: blue;
+}
+
+h4{
+    text-align: center;
+    margin-bottom: 0;
+}
+.table2{
+    margin-top: 30px;
+}
+#table2 td, #table3 td{
+    padding: 10px;
+}
+
+.table3{
+    margin-top: 30px;
+}
